[506][table] fix headers horizontal alignment for IE

--- a/packages/scss/src/components/_table.scss
+++ b/packages/scss/src/components/_table.scss
@@ -21,6 +21,7 @@
 	display: table-cell;
 	font-weight: 600;
 	padding: _component("table.padding");
+	text-align: left;
 }
 
 .table-body {
